particle 方式の compute 実装

--- a/Packages/jp.nobnak.kuramoto_model/package.json
+++ b/Packages/jp.nobnak.kuramoto_model/package.json
@@ -11,6 +11,7 @@
 	],
 
 	"dependencies": {
-		"com.unity.mathematics": "1.2.6"
+		"com.unity.mathematics": "1.2.6",
+		"com.unity.render-pipelines.core": "14.0.9"
 	}
 }
