--- a/Packages/jp.nobnak.kuramoto_model/Runtime/Kuramoto Model.asmdef
+++ b/Packages/jp.nobnak.kuramoto_model/Runtime/Kuramoto Model.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "",
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
         "GUID:b9bff3a943395c246980bd4d2ee36775"
     ],
     "includePlatforms": [],
