--- a/Packages/jp.nobnak.kuramoto_model/package.json
+++ b/Packages/jp.nobnak.kuramoto_model/package.json
@@ -5,7 +5,7 @@
 	},
 	"name": "jp.nobnak.kuramoto_model",
 	"displayName": "Kuramoto Model",
-	"version": "0.1.2",
+	"version": "0.1.3",
 
 	"samples": [
 		{
@@ -17,6 +17,7 @@
 
 	"dependencies": {
 		"com.unity.mathematics": "1.2.6",
-		"com.unity.render-pipelines.core": "14.0.9"
+		"com.unity.render-pipelines.core": "14.0.9",
+		"jp.nobnak.random-xorwow": "0.2.1"
 	}
 }
